--- a/ld30/Cargo.toml
+++ b/ld30/Cargo.toml
@@ -21,3 +21,7 @@ git = "https://github.com/gfx-rs/gfx-rs"
 
 git = "https://github.com/sebcrozet/nphysics"
 
+[dependencies.sdl2_game_window]
+
+git = "https://github.com/pistondevelopers/sdl2_game_window"
+
