--- a/ld30/Cargo.toml
+++ b/ld30/Cargo.toml
@@ -25,3 +25,7 @@ git = "https://github.com/sebcrozet/nphysics"
 
 git = "https://github.com/pistondevelopers/sdl2_game_window"
 
+[dependencies.wavefront-obj]
+
+git = "https://github.com/bvssvni/wavefront-obj"
+
